--- a/src/asset/view/config.html
+++ b/src/asset/view/config.html
@@ -30,7 +30,7 @@
     </section>
 
     <section class="row mb-2">
-      <div id="config-table" style="width: 100%;">Loading Table Data...</div>
+      <div id="config-table" style="width: 100%; font-family: Inconsolata, Consolas, Courier New, monospace;">Loading Table Data...</div>
     </section>
 
     <br />
